header input  entrada 01

--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Nossa Escola</title>
+    <title>Home | </title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <
+    <!--header é a parte do cabeçalho do site, é o topo da página-->
+    <header class="cabeçalho-itens">
+        <img class="titulo_site">Hospital Esperança</h1>
+        <div class="sociais">
+            <img class="sociais" src="whatsapp.png" alt="Logo do Whatsapp do Hospital">
+            <img class="sociais" src="facebook.png" alt="Facebook do Hospital">
+            <img class="sociais" src="instagram.png" alt="Instagram do Hospital">
+        </div>
+    </header>
+<!--Seção banner 1 é a parte do parágrafo 1 da página-->
+<section class=""banner1">
+    <section class="escola.image" src="banner.png" alt="Banner do Hospital"
+</section>
+
 </body>
 </html>
