--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
 <section class="medicos">
     <h1 class="medicos_titulo">Médicos em destaque 2023</h1>
     <p> </p>
-    </div>
+    <div class="medicos_todos">
+    <div class="medico-div">
+
 </html>
