--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <!--header é a parte do cabeçalho do site, é o topo da página-->
             <header class="cabecalho-itens">
             
-            <img class="cabecalho_imagem" src="banner.png" alt="Logo da Página">
+            <img class="cabecalho_imagem" src="logo_hospital.png" alt="Logo da Página">
             
             <h1 class="titulo_site">Hospital Esperança</h1>
             <div class="sociais">
@@ -24,7 +24,7 @@
             </header>
             <!--Seção banner 1 é a parte do paragrafo 1 da página-->
 <section class="banner1">
-    <img class="" src="" alt="Banner
+    <img class="" src="banner.png" alt="Banner
     da Escola">
     </section>
     <!--Seção medicos é a parte do paragrafo 2 da página-->
