--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
 
     <!--Seção rodapé é a parte final da paragrafo 3 da página-->
 <footer class="hospital">
-    <img class="logo_hospital" src="logo_hospital.png" alt="Logo
-    do Hospital">
+    <img class="logo_hospital_rodape" src="logo_hospital.png" alt="Logo
+    do Hospital Rodape">
     <h2 class="hospital-titulo">Mais informações entre em contato<a
     class="link" href="https://wa.me/5541999999999"> 41 9.9999-9999
     </a></h2>
