--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
             </div>
 
             <div class="medicos-div">
-                            
-                 <img class="medicos-imagem" src="medica.png" alt="Foto dos médicos destaques do ano de 2024">
+                <img class="medicos-imagem" src="medica.png" alt="Foto dos médicos destaques do ano de 2024">
                             
                 <h3 class="medicos-nome">Médica 4</h3>
                 <a href="https://cursos.alura.com.br/dashboard">
@@ -181,7 +180,7 @@
 <footer class="hospital">
     <img class="logo_rodape" src="logo_hospital.png" alt="Logo
     do Rodape">
-    <h2 class="hospital-titulo">Mais informações entre em contato<a
+    <h2 class="hospital-info">Mais informações entre em contato<a
     class="link" href="https://wa.me/5541999999999"> 41 9.9999-9999
     </a></h2>
     <p></p>
